<resources>
    <string name="app_name">Crime</string>

    <string name="forgetten_password">Forgetten password?</string>
    <string name="fgtnPassword">Forgetten password</string>
    <string name="new_user">I am a new User</string>

    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="showNotMatchEmail">Email Not Matched…</string>
    <string name="password">Uid Number</string>
    <string name="etxtEmailHint">Enter your Email</string>
    <string name="emailCheck">Check</string>
    <string name="fileYourComplaint">File your Complaint</string>
    <string name="ratting">Give your ratting</string>
    <string name="status">Check your complaint status</string>
    <string name="againstPolice">Complaint against police</string>
    <string name="logout">Logout</string>

    <!-- copy rigths-->
    <string name="copy_right">Copyrights \u00a9 2018. Uma technologies.Inc</string>

    <string name="title_activity_view">ViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="tab_text_1">Complaint</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Details</string>
    <string name="tab_text_4">Ratting</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_police">PoliceActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
